Refactor internal data reading for VBCC (#1555)
The refactor removes the dependency of PendingCompoundCommit from
InternalHeaderOrFile. It allows both internalBlobLocations and
internalFilesByOffset to be populated in a single loop without the need
to instantiate PendingCompoundCommit first.

Relates:
https://github.com/elastic/elasticsearch-serverless/pull/1540#discussion_r1533690238